--- a/portfolio.html
+++ b/portfolio.html
@@ -116,14 +116,20 @@
         </div>
         <div class="footer-second">
           <ul>
-            <li><a href="https://www.linkedin.com/in/navdeep-kaur-148a21333/">Linked-in profile</a></li>
+            <li>
+              <a href="https://www.linkedin.com/in/navdeep-kaur-148a21333/"
+                >Linked-in profile</a
+              >
+            </li>
           </ul>
         </div>
         <div class="footer-third">
           <ul>
-            <li><a href="https://github.com/navdeepkaur76">Github profile profile</a></li>
+            <li>
+              <a href="https://github.com/navdeepkaur76">Github profile</a>
+            </li>
           </ul>
-        </div>        
+        </div>
       </div>
       <div class="footer-rights">
         copyright&#169; navdeep_portfolio.com | All Rights Resreved
